Mengubah isi file team.html

--- a/team.html
+++ b/team.html
@@ -9,10 +9,11 @@
     <section id="team">
         <h1>The Juks Team</h1>
         <ul>
-            <li>1. Juki</li>
-            <li>2. Alvin</li>
+            <li>1. Juki Sadikin</li>
+            <li>2. Alvin Putra </li>
             <li>3. who??</li>
         </ul>
+        <p>dua orang siswa SMKN 26 yang sedang belajar ngoding</p>
     </section>
 </body>
 </html>
