mengubah isi dari file team.html

--- a/team.html
+++ b/team.html
@@ -7,12 +7,12 @@
 </head>
 <body>
     <section id="team">
-        <h1>The Juks Team</h1>
+        <h4>The Juks Team</h4>
         <ul>
             <li>1. Juki</li>
             <li>2. Alvin</li>
-            <li>3. who??</li>
         </ul>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Expedita, ab vero exercitationem ratione quisquam asperiores inventore provident quaerat ad reiciendis deleniti accusamus consequatur unde optio dolorum minima, reprehenderit, eaque sint!</p>
     </section>
 </body>
 </html>
