--- a/budaya.html
+++ b/budaya.html
@@ -110,7 +110,7 @@
             </div>
         </div>
     </section>
-
+<!-- end of kearifan -->
     
     <!-- budaya -->
     <section id="budaya">
@@ -141,7 +141,6 @@
             </div>
         </div>
     </section>
-    <!-- end -->
+    <!-- end of budaya-->
 </body>
-
 </html>
